--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.0.0",
   "private": true,
   "scripts": {
-    "start": "./node_modules/.bin/nodemon src/app.js",
+    "start": "nodemon src/app.js",
     "create-db": "./node_modules/.bin/sequelize-cli db:create"
   },
   "dependencies": {
